[GTK] HTTP auth layout tests are flaky https://bugs.webkit.org/show_bug.cgi?id=158919

Reviewed by Michael Catanzaro.

Source/WebKit2:

Implement NetworkSession::clearCredentials() for soup using the new libsoup API when available.

* NetworkProcess/soup/NetworkSessionSoup.cpp:
(WebKit::NetworkSessionSoup::clearCredentials):
* NetworkProcess/soup/NetworkSessionSoup.h:

Tools:

* gtk/jhbuild.modules: Update libsoup to version 2.57.1.
* gtk/jhbuildrc: Stop passing --enable-introspection unconditionally to all modules. We don't really need
introspection for the dependencies in the internal build, and it makes newer libsoup build fail because of
missing valac in the bots.

LayoutTests:

Unskip tests that should pass now.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/183794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210234 268f45cc-cd09-0410-ab3c-d52691b4dbfc